--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<header>
 		<h1>@basdanny:$<span class="cursor">|</span></h1>
 		<p>
-			{{Summary}}<br>
-			{{Experience}}<br>
-			{{Languages}}<br>
-			{{Something smart and funny about myself}}<br>
+			{{summary}}<br>
+			{{experience}}<br>
+			{{languages}}<br>
+			{{something smart and funny about myself}}<br>
 			{{me, me, me...me again}}<br>
 		</p>
 		<a href="https://www.linkedin.com/in/dannybaskin">
